tests/bad/test1.latte
// Test void argument

class Hej {
    int fun (int x) {}
}


